Fix to image styling in blogs so they're centered and don't look silly, add more detail to coyote vandalism blog post, fix gig image covers on gigs page

--- a/_sass/common.scss
+++ b/_sass/common.scss
@@ -418,3 +418,167 @@ h3 {
 	}
 
 }
+
+/* Becuase my Bootstrap CSS is a bit old and doesn't have offset */
+.col-xs-offset-12 {
+	margin-left: 100%;
+  }
+  .col-xs-offset-11 {
+	margin-left: 91.66666667%;
+  }
+  .col-xs-offset-10 {
+	margin-left: 83.33333333%;
+  }
+  .col-xs-offset-9 {
+	margin-left: 75%;
+  }
+  .col-xs-offset-8 {
+	margin-left: 66.66666667%;
+  }
+  .col-xs-offset-7 {
+	margin-left: 58.33333333%;
+  }
+  .col-xs-offset-6 {
+	margin-left: 50%;
+  }
+  .col-xs-offset-5 {
+	margin-left: 41.66666667%;
+  }
+  .col-xs-offset-4 {
+	margin-left: 33.33333333%;
+  }
+  .col-xs-offset-3 {
+	margin-left: 25%;
+  }
+  .col-xs-offset-2 {
+	margin-left: 16.66666667%;
+  }
+  .col-xs-offset-1 {
+	margin-left: 8.33333333%;
+  }
+  .col-xs-offset-0 {
+	margin-left: 0%;
+  }
+  @media (min-width: 768px) {
+	.col-sm-offset-12 {
+	  margin-left: 100%;
+	}
+	.col-sm-offset-11 {
+	  margin-left: 91.66666667%;
+	}
+	.col-sm-offset-10 {
+	  margin-left: 83.33333333%;
+	}
+	.col-sm-offset-9 {
+	  margin-left: 75%;
+	}
+	.col-sm-offset-8 {
+	  margin-left: 66.66666667%;
+	}
+	.col-sm-offset-7 {
+	  margin-left: 58.33333333%;
+	}
+	.col-sm-offset-6 {
+	  margin-left: 50%;
+	}
+	.col-sm-offset-5 {
+	  margin-left: 41.66666667%;
+	}
+	.col-sm-offset-4 {
+	  margin-left: 33.33333333%;
+	}
+	.col-sm-offset-3 {
+	  margin-left: 25%;
+	}
+	.col-sm-offset-2 {
+	  margin-left: 16.66666667%;
+	}
+	.col-sm-offset-1 {
+	  margin-left: 8.33333333%;
+	}
+	.col-sm-offset-0 {
+	  margin-left: 0%;
+	}
+  }
+  @media (min-width: 992px) {
+	.col-md-offset-12 {
+	  margin-left: 100%;
+	}
+	.col-md-offset-11 {
+	  margin-left: 91.66666667%;
+	}
+	.col-md-offset-10 {
+	  margin-left: 83.33333333%;
+	}
+	.col-md-offset-9 {
+	  margin-left: 75%;
+	}
+	.col-md-offset-8 {
+	  margin-left: 66.66666667%;
+	}
+	.col-md-offset-7 {
+	  margin-left: 58.33333333%;
+	}
+	.col-md-offset-6 {
+	  margin-left: 50%;
+	}
+	.col-md-offset-5 {
+	  margin-left: 41.66666667%;
+	}
+	.col-md-offset-4 {
+	  margin-left: 33.33333333%;
+	}
+	.col-md-offset-3 {
+	  margin-left: 25%;
+	}
+	.col-md-offset-2 {
+	  margin-left: 16.66666667%;
+	}
+	.col-md-offset-1 {
+	  margin-left: 8.33333333%;
+	}
+	.col-md-offset-0 {
+	  margin-left: 0%;
+	}
+  }
+  @media (min-width: 1200px) {
+	.col-lg-offset-12 {
+	  margin-left: 100%;
+	}
+	.col-lg-offset-11 {
+	  margin-left: 91.66666667%;
+	}
+	.col-lg-offset-10 {
+	  margin-left: 83.33333333%;
+	}
+	.col-lg-offset-9 {
+	  margin-left: 75%;
+	}
+	.col-lg-offset-8 {
+	  margin-left: 66.66666667%;
+	}
+	.col-lg-offset-7 {
+	  margin-left: 58.33333333%;
+	}
+	.col-lg-offset-6 {
+	  margin-left: 50%;
+	}
+	.col-lg-offset-5 {
+	  margin-left: 41.66666667%;
+	}
+	.col-lg-offset-4 {
+	  margin-left: 33.33333333%;
+	}
+	.col-lg-offset-3 {
+	  margin-left: 25%;
+	}
+	.col-lg-offset-2 {
+	  margin-left: 16.66666667%;
+	}
+	.col-lg-offset-1 {
+	  margin-left: 8.33333333%;
+	}
+	.col-lg-offset-0 {
+	  margin-left: 0%;
+	}
+  }
