--- a/_sass/page_blog.scss
+++ b/_sass/page_blog.scss
@@ -19,7 +19,8 @@
     }
 
     a {
-        font-weight: bold;
+      color: #01BAEF;
+      font-weight: bold;
     }
 
     .gigs {
@@ -64,12 +65,11 @@
 
 .image h5 {
     position: absolute;
-    font-style: italic;
     left: 10px;
     color: black;
 
     a {
-        color: pink;
+      color: #01BAEF;
     }
 }
 
